fix external icons that wrap

--- a/docs/assets/styles/external-links.css
+++ b/docs/assets/styles/external-links.css
@@ -1,5 +1,8 @@
 a.external {
-  white-space: nowrap;
+  .external-icon-wrapper {
+    display: inline;
+    white-space: nowrap;
+  }
 
   svg {
     display: inline-block;
